--- a/index.html
+++ b/index.html
@@ -3,11 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <title>MD Jannatun Nayeem</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
-        <div>
-            <img src="" alt="">
+    <section class="intro-area felxible-container">
+        <div class="half-width">
+            <img src="images/monkey.jpg" alt="Photo">
+        </div>
+        <div class="half-width">
+            <h1>Welcome to My Practice Website</h1>
+            <p>My name is Md Jannatun Nayeem. I am a computer science student. This website is just for my Practice. Hope it is okey in your view.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, vero dolorem repellat sed consequatur inventore ad at veniam, iure perferendis sapiente. Non dignissimos laborum quam voluptatum odio quibusdam iste beatae.</p>
+            <br>
+
+            <a target="_blank" href="https://www.google.com">Learn</a>
+        </div>
+    </section>
+    <section class="mid-area felxible-container">
+        <div class="half-width">
+            <h1>About Skills</h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus in eligendi fugiat molestias quisquam reprehenderit odit voluptates aut magnam illo excepturi incidunt eum sed ullam, asperiores quia? Expedita, dolorum earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, id! Voluptatem inventore omnis nisi quas numquam eius, rerum qui ipsam natus, dolorem hic obcaecati, voluptate vel officiis rem laudantium sint?w Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia cumque eaque ipsam quas porro numquam omnis dolorem unde, hic tempore odit quidem quia voluptas repellendus delectus dolores provident atque molestiae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus ullam facere eligendi nisi dolore voluptatem, facilis qui debitis soluta consequatur est tempora exercitationem totam, fugiat quisquam labore laudantium fugit nobis!
+            </p>
+            <br>
+            <a id="change-color" target="_blank" href="https://www.youtube.com">For Relax</a>
+        </div>
+        <div class="half-width">
+            <img src="images/baby-working.jpg" alt="Photo">
+        </div>
+    </section>
+    <section class="bottom-area">
+        <h1>
+                Experience
+        </h1>
+        <div class="felxible-container">
+            <div class="bottom-item">
+                <h2>Noob Web Developer</h2>
+                <h4>Skill Level :- Learner</h4>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, itaque! Dignissimos eum nemo repellat eos aliquam in laborum autem est nostrum accusantium necessitatibus, dolor ab vitae vero iste optio eius?Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis hic magnam assumenda repellendus adipisci quisquam eligendi quo deleniti a, itaque, enim temporibus sequi, modi officiis quos autem dolorum iusto Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti fuga voluptate id quisquam vero qui autem pariatur perspiciatis quas corporis fugiat rem nihil amet repellat, culpa nam laborum nobis ut!</p>
+            </div>
+            <div class="bottom-item">
+                <h2>Learner Web Developer</h2>
+                <h4>Skill Level :- Begginer</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium unde dicta alias! Laborum, quo deleniti. Animi reiciendis ab facilis perspiciatis asperiores maxime, nostrum, quis voluptatem ea iusto itaque dignissimos ex!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum inventore eos molestias officia deserunt possimus debitis facilis eaque sequi, adipisci nam expedita perferendis iusto omnis necessitatibus sunt et totam cum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, nesciunt blanditiis quo quas dolores sint. Velit quibusdam, nam et obcaecati repellendus consequatur. Ullam officiis repellat sint quis qui expedita assumenda.</p>
+            </div>
         </div>
     </section>
 </body>
