--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus in eligendi fugiat molestias quisquam reprehenderit odit voluptates aut magnam illo excepturi incidunt eum sed ullam, asperiores quia? Expedita, dolorum earum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, id! Voluptatem inventore omnis nisi quas numquam eius, rerum qui ipsam natus, dolorem hic obcaecati, voluptate vel officiis rem laudantium sint?w Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia cumque eaque ipsam quas porro numquam omnis dolorem unde, hic tempore odit quidem quia voluptas repellendus delectus dolores provident atque molestiae! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus ullam facere eligendi nisi dolore voluptatem, facilis qui debitis soluta consequatur est tempora exercitationem totam, fugiat quisquam labore laudantium fugit nobis!
             </p>
             <br>
-            <a id="change-color" target="_blank" href="https://www.youtube.com">For Relax</a>
+            <a id="change-color" target="_blank" href="https://www.youtube.com/watch?v=TqZ6V1M0Zhk">For Relax</a>
         </div>
         <div class="half-width">
             <img src="images/baby-working.jpg" alt="Photo">
@@ -39,18 +39,19 @@
         <h1>
                 Experience
         </h1>
-        <div class="felxible-container">
-            <div class="bottom-item">
+        <div class="felxible-container bottom-marge">
+            <div id="change-color1" class="bottom-item">
                 <h2>Noob Web Developer</h2>
-                <h4>Skill Level :- Learner</h4>
+                <h4>Skill Level :- <span class="text-color">Learner</span></h4>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam, itaque! Dignissimos eum nemo repellat eos aliquam in laborum autem est nostrum accusantium necessitatibus, dolor ab vitae vero iste optio eius?Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis hic magnam assumenda repellendus adipisci quisquam eligendi quo deleniti a, itaque, enim temporibus sequi, modi officiis quos autem dolorum iusto Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti fuga voluptate id quisquam vero qui autem pariatur perspiciatis quas corporis fugiat rem nihil amet repellat, culpa nam laborum nobis ut!</p>
             </div>
-            <div class="bottom-item">
+            <div id="change-color2" class="bottom-item">
                 <h2>Learner Web Developer</h2>
-                <h4>Skill Level :- Begginer</h4>
+                <h4>Skill Level :- <span class="text-color">Begginer</span></h4>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Praesentium unde dicta alias! Laborum, quo deleniti. Animi reiciendis ab facilis perspiciatis asperiores maxime, nostrum, quis voluptatem ea iusto itaque dignissimos ex!Loremlorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum inventore eos molestias officia deserunt possimus debitis facilis eaque sequi, adipisci nam expedita perferendis iusto omnis necessitatibus sunt et totam cum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse, nesciunt blanditiis quo quas dolores sint. Velit quibusdam, nam et obcaecati repellendus consequatur. Ullam officiis repellat sint quis qui expedita assumenda.</p>
             </div>
         </div>
     </section>
+    <footer>© 2022 MD Jannatun Nayeem. All Rights Reserved</footer>
 </body>
 </html>
